FIx comment layout bug

--- a/frontend/src/views/blog/detail/index.scss
+++ b/frontend/src/views/blog/detail/index.scss
@@ -211,7 +211,7 @@
       }
 
       .comment-textarea {
-        resize: vertical;
+        resize: none;
         font-size: 0.875rem;
         line-height: 1.6;
         border-color: #dee2e6;
